--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.ai.navigation": "1.1.5",
     "com.unity.cinemachine": "2.9.5",
     "com.unity.entities.graphics": "1.0.16",
     "com.unity.ide.rider": "3.0.25",
